[package]
name = "soms-svg-server"
version = "1.0.0"
authors = ["bill wincer"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10"  }
schemars = "0.8.12"
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
# serde-json-wasm = "0.2.1"
# snafu = { version = "0.6.3" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "permit", "viewing-key", "crypto"] }
# subtle = { version = "2.2.3", default-features = false }
# sha2 = { version = "0.9.1", default-features = false }
base64 = "0.21.2"
bincode2 = "2.0.1"
# rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
# rand = "0.7.3"
# primitive-types = { version = "0.9.0", default-features = false }

#[dependencies.serde_with]
#version = "1.11.0"
[dev-dependencies]
cosmwasm-schema = { version = "1.4.1" }
